Добавляет блок тренеры

--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="keywords" content="фитнес центр, кардио-зона, кроссфит, групповые занятия, годовой абонемент" />
     <meta name="description" content="SUPERGYM — самый большой фитнес центр за Уралом, идеальное место для укрепления тела и здоровья. Тренажерный зал, кардио-зона, групповые занятия.">
-    <title>SUPERGYM</title>    
+    <title>SUPERGYM — фитнес-центр</title>    
     <link rel="preload" href="fonts/RobotoCondensedLight.woff2" as="font" crossorigin="anonymous">
     <link rel="preload" href="fonts/RobotoCondensed.woff2" as="font" crossorigin="anonymous">
     <link rel="preload" href="fonts/RobotoCondensedBold.woff2" as="font" crossorigin="anonymous">
@@ -175,6 +175,178 @@
          </div>
        </section>
     </div>   
+    <section class="coaches-slider">
+      <div class="coaches-slider__content  container">
+        <h2>Тренеры</h2>
+        <div class="coaches-slider__container">
+          <button class="coaches-slider__button  coach-slider__button--prev" type="button" aria-label="Назад"></button>
+          <div class="coaches-slider__list-wrapper">
+            <ul class="coaches-slider__list">
+              <li class="coaches-slider__item coach">
+                <div class="coach__info">
+                  <h3>Анна Павлова</h3>
+                  <div class="coach__info-inner">
+                    <p>CrossFit</p>
+                    <ul class="coach__achievements">
+                      <li>Certified Level 3 Trainer</li>
+                      <li>Победитель чемпионата России по CrossFit</li>
+                      <li>Опыт — 6 лет</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="coach__image">
+                  <picture>
+                    <source type="image/webp" srcset="img/coach-1@1x.webp 1x, img/coach-1@2x.webp 2x">
+                    <img src="img/coach-1@1x.jpg" srcset="img/coach-1@1x.jpg 1x, img/coach-1@2x.jpg 2x" alt="Фотография тренера Анны Павловой">
+                  </picture>
+                </div>
+              </li>
+              <li class="coaches-slider__item coach">
+                <div class="coach__info">
+                  <h3>Алексей Лавров</h3>
+                  <div class="coach__info-inner">
+                    <p>CrossFit</p>
+                    <ul class="coach__achievements">
+                      <li>Certified Level 3 Trainer</li>
+                      <li>Победитель чемпионата России по CrossFit</li>
+                      <li>Опыт — 6 лет</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="coach__image">
+                  <picture>
+                    <source type="image/webp" srcset="img/coach-2@1x.webp 1x, img/coach-2@2x.webp 2x">
+                    <img src="img/coach-2@1x.jpg" srcset="img/coach-1@1x.jpg 1x, img/coach-2@2x.jpg 2x"
+                      alt="Фотография тренера Алексея Лаврова">
+                  </picture>
+                </div>
+              </li>
+              <li class="coaches-slider__item coach">
+                <div class="coach__info">
+                  <h3>Александр Пашков</h3>
+                  <div class="coach__info-inner">
+                    <p>CrossFit</p>
+                    <ul class="coach__achievements">
+                      <li>Certified Level 3 Trainer</li>
+                      <li>Победитель чемпионата России по CrossFit</li>
+                      <li>Опыт — 6 лет</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="coach__image">
+                  <picture>
+                    <source type="image/webp" srcset="img/coach-3@1x.webp 1x, img/coach-3@2x.webp 2x">
+                    <img src="img/coach-3@1x.jpg" srcset="img/coach-3@1x.jpg 1x, img/coach-3@2x.jpg 2x"
+                      alt="Фотография тренера Александра Пашкова">
+                  </picture>
+                </div>
+              </li>
+              <li class="coaches-slider__item coach">
+                <div class="coach__info">
+                  <h3>Мария Кетова</h3>
+                  <div class="coach__info-inner">
+                    <p>CrossFit</p>
+                    <ul class="coach__achievements">
+                      <li>Certified Level 3 Trainer</li>
+                      <li>Победитель чемпионата России по CrossFit</li>
+                      <li>Опыт — 6 лет</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="coach__image">
+                  <picture>
+                    <source type="image/webp" srcset="img/coach-4@1x.webp 1x, img/coach-4@2x.webp 2x">
+                    <img src="img/coach-4@1x.jpg" srcset="img/coach-4@1x.jpg 1x, img/coach-4@2x.jpg 2x"
+                      alt="Фотография тренера Марии Кетовой">
+                  </picture>
+                </div>
+              </li>
+              <li class="coaches-slider__item coach">
+                <div class="coach__info">
+                  <h3>Анна Павлова</h3>
+                  <div class="coach__info-inner">
+                    <p>CrossFit</p>
+                    <ul class="coach__achievements">
+                      <li>Certified Level 3 Trainer</li>
+                      <li>Победитель чемпионата России по CrossFit</li>
+                      <li>Опыт — 6 лет</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="coach__image">
+                  <picture>
+                    <source type="image/webp" srcset="img/coach-1@1x.webp 1x, img/coach-1@2x.webp 2x">
+                    <img src="img/coach-1@1x.jpg" srcset="img/coach-1@1x.jpg 1x, img/coach-1@2x.jpg 2x"
+                      alt="Фотография тренера Анны Павловой">
+                  </picture>
+                </div>
+              </li>
+              <li class="coaches-slider__item coach">
+                <div class="coach__info">
+                  <h3>Алексей Лавров</h3>
+                  <div class="coach__info-inner">
+                    <p>CrossFit</p>
+                    <ul class="coach__achievements">
+                      <li>Certified Level 3 Trainer</li>
+                      <li>Победитель чемпионата России по CrossFit</li>
+                      <li>Опыт — 6 лет</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="coach__image">
+                  <picture>
+                    <source type="image/webp" srcset="img/coach-2@1x.webp 1x, img/coach-2@2x.webp 2x">
+                    <img src="img/coach-2@1x.jpg" srcset="img/coach-1@1x.jpg 1x, img/coach-2@2x.jpg 2x"
+                      alt="Фотография тренера Алексея Лаврова">
+                  </picture>
+                </div>
+              </li>
+              <li class="coaches-slider__item coach">
+                <div class="coach__info">
+                  <h3>Александр Пашков</h3>
+                  <div class="coach__info-inner">
+                    <p>CrossFit</p>
+                    <ul class="coach__achievements">
+                      <li>Certified Level 3 Trainer</li>
+                      <li>Победитель чемпионата России по CrossFit</li>
+                      <li>Опыт — 6 лет</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="coach__image">
+                  <picture>
+                    <source type="image/webp" srcset="img/coach-3@1x.webp 1x, img/coach-3@2x.webp 2x">
+                    <img src="img/coach-3@1x.jpg" srcset="img/coach-3@1x.jpg 1x, img/coach-3@2x.jpg 2x"
+                      alt="Фотография тренера Александра Пашкова">
+                  </picture>
+                </div>
+              </li>
+              <li class="coaches-slider__item coach">
+                <div class="coach__info">
+                  <h3>Мария Кетова</h3>
+                  <div class="coach__info-inner">
+                    <p>CrossFit</p>
+                    <ul class="coach__achievements">
+                      <li>Certified Level 3 Trainer</li>
+                      <li>Победитель чемпионата России по CrossFit</li>
+                      <li>Опыт — 6 лет</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="coach__image">
+                  <picture>
+                    <source type="image/webp" srcset="img/coach-4@1x.webp 1x, img/coach-4@2x.webp 2x">
+                    <img src="img/coach-4@1x.jpg" srcset="img/coach-4@1x.jpg 1x, img/coach-4@2x.jpg 2x"
+                      alt="Фотография тренера Марии Кетовой">
+                  </picture>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <button class="coaches-slider__button  coaches-slider__button--next" type="button" aria-label="Вперёд"></button>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="page-footer"></footer>  
   <script src="js/vendor.js"></script>
