Добавляет блок отзывы

--- a/source/index.html
+++ b/source/index.html
@@ -179,7 +179,7 @@
       <div class="coaches-slider__content  container">
         <h2>Тренеры</h2>
         <div class="coaches-slider__container">
-          <button class="coaches-slider__button  coach-slider__button--prev" type="button" aria-label="Назад" onclick="show(-4)"></button>
+          <button class="coaches-slider__button  coaches-slider__button--prev" type="button" aria-label="Назад" onclick="show(-4)"></button>
           <div class="coaches-slider__list-wrapper">
             <ul class="coaches-slider__list">
               <li class="coaches-slider__item coach">
@@ -375,7 +375,7 @@
             </p>
             <div class="advantage-item__info">
               <h3>Собственная парковка</h3>
-              <p>Вы всегда найдете место для своей&nbsp;машины на нашей парковке</p>
+              <p>Вы всегда найдете место для своей машины на нашей парковке</p>
             </div>
           </li>
           <li class="advantage-item">
@@ -399,6 +399,57 @@
             </div>
           </li>
         </ul>
+      </div>
+    </section>
+    <section class="promotions">
+      <div class="promotions__content  container">
+        <h2>Акции</h2>
+        <div class="promotions__info">
+          <div class="promotions__main">
+           <h3>
+            <span>Год</span>
+            <span>4999</span>
+           </h3>
+            <p>Безлимитный абонемент в тренажерный зал</p>
+            <a class="promotions__link" href="#">Подробнее</a>
+          </div>
+          <ul class="promotions__list">
+            <li class="promotion-item">
+              <h3>Месяц бесплатно</h3>
+              <p>Приведи друга, получи абонемент&nbsp;в&nbsp;подарок</p>
+              <a class="promotion-item__link" href="#">Подробнее</a>
+            </li>
+            <li class="promotion-item">
+              <h3>Скидка 20%</h3>
+              <p>Корпоративный фитнес с командой</p>
+              <a class="promotion-item__link" href="#">Подробнее</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="comment-slider">
+      <div class="comment-slider__content container">
+        <h2>Отзывы</h2>
+        <div class="comment-slider__container">
+          <button class="comment-slider__button  comment-slider__button--prev" type="button" aria-label="Назад" onclick="show(-1)"></button>
+          <div class="comment-slider__list-wrapper">
+            <ul class="comment-slider__list">
+              <li class="comment-slider__item">
+                <h3>Анна Орлова</h3>
+                <p>«Хожу в SuperClub уже больше года. Нравится, что в клубе всегда чисто, тренажеры обновляют, персонал
+                  дружелюбный. Зал просторный, даже в вечернее время нет очередей»</p>
+              </li>
+              <li class="comment-slider__item">
+                <h3>Анна Орлова</h3>
+                <p>«Хожу в SuperClub уже больше года. Нравится, что в клубе всегда чисто, тренажеры обновляют, персонал
+                  дружелюбный. Зал просторный, даже в вечернее время нет очередей»</p>
+              </li>
+            </ul>
+          </div>
+          <button class="comment-slider__button  comment-slider__button--next" type="button" aria-label="Вперёд"
+            onclick="show(+1)"></button>
+        </div>
       </div>
     </section>
   </main>
