Добавляет футер, исправляет стили слайдеров

--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
     <link rel="preload" href="fonts/BebasNeueBold.woff2" as="font" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
-<body>
+<body>  
   <main>
     <div class="hero-wrapper">
       <header class="page-header">
@@ -179,30 +179,34 @@
       <div class="coaches-slider__content  container">
         <h2>Тренеры</h2>
         <div class="coaches-slider__container">
-          <button class="coaches-slider__button  coaches-slider__button--prev" type="button" aria-label="Назад" onclick="show(-4)"></button>
+          <button class="coaches-slider__button  coaches-slider__button--prev" type="button" aria-label="Назад"></button>
           <div class="coaches-slider__list-wrapper">
             <ul class="coaches-slider__list">
-              <li class="coaches-slider__item coach">
-                <div class="coach__info">
-                  <h3>Анна Павлова</h3>
-                  <div class="coach__info-inner">
-                    <p>CrossFit</p>
-                    <ul class="coach__achievements">
-                      <li>CrossFit Kids Trainer</li>
-                      <li>Победитель чемпионата Европы по CrossFit</li>
-                      <li>Опыт — 5 лет</li>
-                    </ul>
+              <li class="coaches-slider__item">
+                <div class="coach">
+                  <div class="coach__info">
+                    <h3>Анна Павлова</h3>
+                    <div class="coach__info-inner">
+                      <p>CrossFit</p>
+                      <ul class="coach__achievements">
+                        <li>CrossFit Kids Trainer</li>
+                        <li>Победитель чемпионата Европы по CrossFit</li>
+                        <li>Опыт — 5 лет</li>
+                      </ul>
+                    </div>
                   </div>
-                </div>
-                <div class="coach__image">
-                  <picture>
-                    <source type="image/webp" srcset="img/coach-1@1x.webp 1x, img/coach-1@2x.webp 2x">
-                    <img src="img/coach-1@1x.jpg" srcset="img/coach-1@1x.jpg 1x, img/coach-1@2x.jpg 2x" alt="Фотография тренера Анны Павловой">
-                  </picture>
-                </div>
+                  <div class="coach__image">
+                    <picture>
+                      <source type="image/webp" srcset="img/coach-1@1x.webp 1x, img/coach-1@2x.webp 2x">
+                      <img src="img/coach-1@1x.jpg" srcset="img/coach-1@1x.jpg 1x, img/coach-1@2x.jpg 2x"
+                        alt="Фотография тренера Анны Павловой">
+                    </picture>
+                  </div>
+                </div>                
               </li>
-              <li class="coaches-slider__item coach">
-                <div class="coach__info">
+              <li class="coaches-slider__item">
+                <div class="coach">
+                  <div class="coach__info">
                   <h3>Алексей Лавров</h3>
                   <div class="coach__info-inner">
                     <p>CrossFit</p>
@@ -220,9 +224,11 @@
                       alt="Фотография тренера Алексея Лаврова">
                   </picture>
                 </div>
+                </div>                
               </li>
-              <li class="coaches-slider__item coach">
-                <div class="coach__info">
+              <li class="coaches-slider__item">
+                <div class="coach">
+                  <div class="coach__info">
                   <h3>Александр Пашков</h3>
                   <div class="coach__info-inner">
                     <p>CrossFit</p>
@@ -240,9 +246,11 @@
                       alt="Фотография тренера Александра Пашкова">
                   </picture>
                 </div>
+                </div>                
               </li>
-              <li class="coaches-slider__item coach">
-                <div class="coach__info">
+              <li class="coaches-slider__item">
+                <div class="coach">
+                  <div class="coach__info">
                   <h3>Мария Кетова</h3>
                   <div class="coach__info-inner">
                     <p>CrossFit</p>
@@ -260,90 +268,99 @@
                       alt="Фотография тренера Марии Кетовой">
                   </picture>
                 </div>
+                </div>                
               </li>
-              <li class="coaches-slider__item coach">
-                <div class="coach__info">
-                  <h3>Анна Павлова</h3>
-                  <div class="coach__info-inner">
-                    <p>CrossFit</p>
-                    <ul class="coach__achievements">
-                      <li>CrossFit Kids Trainer</li>
-                      <li>Победитель чемпионата Европы по CrossFit</li>
-                      <li>Опыт — 5 лет</li>
-                    </ul>
+              <li class="coaches-slider__item">
+                <div class="coach">
+                  <div class="coach__info">
+                    <h3>Анна Павлова</h3>
+                    <div class="coach__info-inner">
+                      <p>CrossFit</p>
+                      <ul class="coach__achievements">
+                        <li>CrossFit Kids Trainer</li>
+                        <li>Победитель чемпионата Европы по CrossFit</li>
+                        <li>Опыт — 5 лет</li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="coach__image">
+                    <picture>
+                      <source type="image/webp" srcset="img/coach-1@1x.webp 1x, img/coach-1@2x.webp 2x">
+                      <img src="img/coach-1@1x.jpg" srcset="img/coach-1@1x.jpg 1x, img/coach-1@2x.jpg 2x"
+                        alt="Фотография тренера Анны Павловой">
+                    </picture>
                   </div>
                 </div>
-                <div class="coach__image">
-                  <picture>
-                    <source type="image/webp" srcset="img/coach-1@1x.webp 1x, img/coach-1@2x.webp 2x">
-                    <img src="img/coach-1@1x.jpg" srcset="img/coach-1@1x.jpg 1x, img/coach-1@2x.jpg 2x"
-                      alt="Фотография тренера Анны Павловой">
-                  </picture>
-                </div>
               </li>
-              <li class="coaches-slider__item coach">
-                <div class="coach__info">
-                  <h3>Алексей Лавров</h3>
-                  <div class="coach__info-inner">
-                    <p>CrossFit</p>
-                    <ul class="coach__achievements">
-                      <li>Certified CrossFit Trainer</li>
-                      <li>Участник чемпионата России по CrossFit</li>
-                      <li>Опыт — 5 года</li>
-                    </ul>
+              <li class="coaches-slider__item">
+                <div class="coach">
+                  <div class="coach__info">
+                    <h3>Алексей Лавров</h3>
+                    <div class="coach__info-inner">
+                      <p>CrossFit</p>
+                      <ul class="coach__achievements">
+                        <li>Certified CrossFit Trainer</li>
+                        <li>Участник чемпионата России по CrossFit</li>
+                        <li>Опыт — 5 года</li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="coach__image">
+                    <picture>
+                      <source type="image/webp" srcset="img/coach-2@1x.webp 1x, img/coach-2@2x.webp 2x">
+                      <img src="img/coach-2@1x.jpg" srcset="img/coach-1@1x.jpg 1x, img/coach-2@2x.jpg 2x"
+                        alt="Фотография тренера Алексея Лаврова">
+                    </picture>
                   </div>
                 </div>
-                <div class="coach__image">
-                  <picture>
-                    <source type="image/webp" srcset="img/coach-2@1x.webp 1x, img/coach-2@2x.webp 2x">
-                    <img src="img/coach-2@1x.jpg" srcset="img/coach-1@1x.jpg 1x, img/coach-2@2x.jpg 2x"
-                      alt="Фотография тренера Алексея Лаврова">
-                  </picture>
-                </div>
               </li>
-              <li class="coaches-slider__item coach">
-                <div class="coach__info">
-                  <h3>Александр Пашков</h3>
-                  <div class="coach__info-inner">
-                    <p>CrossFit</p>
-                    <ul class="coach__achievements">
-                      <li>Certified Level 3 Trainer</li>
-                      <li>Победитель чемпионата России по CrossFit</li>
-                      <li>Опыт — 6 лет</li>
-                    </ul>
+              <li class="coaches-slider__item">
+                <div class="coach">
+                  <div class="coach__info">
+                    <h3>Александр Пашков</h3>
+                    <div class="coach__info-inner">
+                      <p>CrossFit</p>
+                      <ul class="coach__achievements">
+                        <li>Certified Level 3 Trainer</li>
+                        <li>Победитель чемпионата России по CrossFit</li>
+                        <li>Опыт — 6 лет</li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="coach__image">
+                    <picture>
+                      <source type="image/webp" srcset="img/coach-3@1x.webp 1x, img/coach-3@2x.webp 2x">
+                      <img src="img/coach-3@1x.jpg" srcset="img/coach-3@1x.jpg 1x, img/coach-3@2x.jpg 2x"
+                        alt="Фотография тренера Александра Пашкова">
+                    </picture>
                   </div>
                 </div>
-                <div class="coach__image">
-                  <picture>
-                    <source type="image/webp" srcset="img/coach-3@1x.webp 1x, img/coach-3@2x.webp 2x">
-                    <img src="img/coach-3@1x.jpg" srcset="img/coach-3@1x.jpg 1x, img/coach-3@2x.jpg 2x"
-                      alt="Фотография тренера Александра Пашкова">
-                  </picture>
-                </div>
               </li>
-              <li class="coaches-slider__item coach">
-                <div class="coach__info">
-                  <h3>Мария Кетова</h3>
-                  <div class="coach__info-inner">
-                    <p>CrossFit</p>
-                    <ul class="coach__achievements">
-                      <li>Certified CrossFit Level 4 Coach (CF-L4)</li>
-                      <li>Победитель чемпионата России по CrossFit</li>
-                      <li>Опыт — 8 лет</li>
-                    </ul>
+              <li class="coaches-slider__item">
+                <div class="coach">
+                  <div class="coach__info">
+                    <h3>Мария Кетова</h3>
+                    <div class="coach__info-inner">
+                      <p>CrossFit</p>
+                      <ul class="coach__achievements">
+                        <li>Certified CrossFit Level 4 Coach (CF-L4)</li>
+                        <li>Победитель чемпионата России по CrossFit</li>
+                        <li>Опыт — 8 лет</li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="coach__image">
+                    <picture>
+                      <source type="image/webp" srcset="img/coach-4@1x.webp 1x, img/coach-4@2x.webp 2x">
+                      <img src="img/coach-4@1x.jpg" srcset="img/coach-4@1x.jpg 1x, img/coach-4@2x.jpg 2x"
+                        alt="Фотография тренера Марии Кетовой">
+                    </picture>
                   </div>
                 </div>
-                <div class="coach__image">
-                  <picture>
-                    <source type="image/webp" srcset="img/coach-4@1x.webp 1x, img/coach-4@2x.webp 2x">
-                    <img src="img/coach-4@1x.jpg" srcset="img/coach-4@1x.jpg 1x, img/coach-4@2x.jpg 2x"
-                      alt="Фотография тренера Марии Кетовой">
-                  </picture>
-                </div>
-              </li>
+              </li>              
             </ul>
           </div>
-          <button class="coaches-slider__button  coaches-slider__button--next" type="button" aria-label="Вперёд" onclick="show(+4)"></button>
+          <button class="coaches-slider__button  coaches-slider__button--next" type="button" aria-label="Вперёд"></button>
         </div>
       </div>
     </section>
@@ -432,7 +449,7 @@
       <div class="comment-slider__content container">
         <h2>Отзывы</h2>
         <div class="comment-slider__container">
-          <button class="comment-slider__button  comment-slider__button--prev" type="button" aria-label="Назад" onclick="show(-1)"></button>
+          <button class="comment-slider__button  comment-slider__button--prev" type="button" aria-label="Назад"></button>
           <div class="comment-slider__list-wrapper">
             <ul class="comment-slider__list">
               <li class="comment-slider__item">
@@ -447,8 +464,7 @@
               </li>
             </ul>
           </div>
-          <button class="comment-slider__button  comment-slider__button--next" type="button" aria-label="Вперёд"
-            onclick="show(+1)"></button>
+          <button class="comment-slider__button  comment-slider__button--next" type="button" aria-label="Вперёд"></button>
         </div>
       </div>
     </section>
@@ -492,7 +508,23 @@
       </section>
     </div>
   </main>
-  <footer class="page-footer"></footer>  
+  <footer class="page-footer">
+    <div class="page-footer__content  container">
+      <a class="page-footer__logo" href="#">SuperGym</a>
+      <ul class="page-footer__list">
+        <li><a href="#">Услуги</a></li>
+        <li><a href="#">Абонементы</a></li>
+        <li><a href="#">Акции</a></li>
+        <li><a href="#">Тренеры</a></li>
+        <li><a href="#">Расписание</a></li>
+      </ul>
+      <ul class="page-footer__socials">
+        <li><a class="page-footer__social  page-footer__social--vk" href="#" aria-label="Мы Вконтакте"></a></li>
+        <li><a class="page-footer__social  page-footer__social--inst" href="#" aria-label="Мы в Инстаграм"></a></li>
+        <li><a class="page-footer__social  page-footer__social--fb" href="#" aria-label="Мы в Фейсбук"></a></li>
+      </ul>
+    </div>
+  </footer>
   <script src="js/vendor.js"></script>
   <script src="js/main.js"></script>        
 </body>
