--- a/source/index.html
+++ b/source/index.html
@@ -6,12 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="keywords" content="фитнес центр, кардио-зона, кроссфит, групповые занятия, годовой абонемент" />
     <meta name="description" content="SUPERGYM — самый большой фитнес центр за Уралом, идеальное место для укрепления тела и здоровья. Тренажерный зал, кардио-зона, групповые занятия.">
-    <title>SUPERGYM — фитнес-центр</title>    
-    <link rel="preload" href="fonts/RobotoCondensedLight.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="fonts/RobotoCondensed.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="fonts/RobotoCondensedBold.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="fonts/BebasNeueRegular.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="fonts/BebasNeueBold.woff2" as="font" crossorigin="anonymous">
+    <title>SUPERGYM — фитнес-центр</title>  
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>  
@@ -84,19 +79,19 @@
                    <h3>С тренером</h3>
                    <p>12 занятий</p>
                    <p data-value="5000">5000 <span>&#8381;</span></p>
-                   <a class="tab-content__link  cta-btn" href="#">Купить абонемент</a>
+                   <a class="tab-content__link  cta-btn" href="">Купить абонемент</a>
                  </li>
                  <li>
                    <h3>Дневной</h3>
                    <p>с 8:00 до 17:00</p>
                    <p data-value="1700">1700 <span>&#8381;</span></p>
-                   <a class="tab-content__link cta-btn" href="#">Купить абонемент</a>
+                   <a class="tab-content__link cta-btn" href="">Купить абонемент</a>
                  </li>
                  <li>
                    <h3>Полный день</h3>
                    <p>с 8:00 до 22:00</p>
                    <p data-value="2700">2700 <span>&#8381;</span></p>
-                   <a class="tab-content__link cta-btn" href="#">Купить абонемент</a>
+                   <a class="tab-content__link cta-btn" href="">Купить абонемент</a>
                  </li>
                </ul>
              </li>
@@ -106,19 +101,19 @@
                    <h3>С тренером</h3>
                    <p>72 занятия</p>
                    <p data-value="27000">27000 <span>&#8381;</span></p>
-                   <a class="tab-content__link  cta-btn" href="#">Купить абонемент</a>
+                   <a class="tab-content__link  cta-btn" href="">Купить абонемент</a>
                  </li>
                  <li>
                    <h3>Дневной</h3>
                    <p>с 8:00 до 17:00</p>
                    <p data-value="1500">1500 <span>&#8381;</span></p>
-                   <a class="tab-content__link  cta-btn" href="#">Купить абонемент</a>
+                   <a class="tab-content__link  cta-btn" href="">Купить абонемент</a>
                  </li>
                  <li>
                    <h3>Полный день</h3>
                    <p>с 8:00 до 22:00</p>
                    <p data-value="2500">2500 <span>&#8381;</span></p>
-                   <a class="tab-content__link  cta-btn" href="#">Купить абонемент</a>
+                   <a class="tab-content__link  cta-btn" href="">Купить абонемент</a>
                  </li>
                </ul>
              </li>
@@ -128,19 +123,19 @@
                    <h3>С тренером</h3>
                    <p>144 занятия</p>
                    <p data-value="48000">48000 <span>&#8381;</span></p>
-                   <a class="tab-content__link cta-btn" href="#">Купить абонемент</a>
+                   <a class="tab-content__link cta-btn" href="">Купить абонемент</a>
                  </li>
                  <li>
                    <h3>Дневной</h3>
                    <p>с 8:00 до 17:00</p>
                    <p data-value="1300">1300 <span>&#8381;</span></p>
-                   <a class="tab-content__link cta-btn" href="#">Купить абонемент</a>
+                   <a class="tab-content__link cta-btn" href="">Купить абонемент</a>
                  </li>
                  <li>
                    <h3>Полный день</h3>
                    <p>с 8:00 до 22:00</p>
                    <p data-value="2300">2300 <span>&#8381;</span></p>
-                   <a class="tab-content__link cta-btn" href="#">Купить абонемент</a>
+                   <a class="tab-content__link cta-btn" href="">Купить абонемент</a>
                  </li>
                </ul>
              </li>
@@ -169,7 +164,7 @@
                  </tbody>
                </table>
                <p>Ежегодные соревнования по <span>CrossFit</span></p>
-               <a class="promo__link  cta-btn" href="#">Заполнить заявку</a>
+               <a class="promo__link  cta-btn" href="">Заполнить заявку</a>
              </div>
            </div>
          </div>
